# aiwell.md

./: .gitignore  index.html  package-lock.json  package.json
skill/: write-to-aiwell.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AddNodeModal.tsx  ImportModal.tsx  KnowledgeGraph.css  KnowledgeGraph.tsx  Modal.css  NodeModal.css  NodeModal.tsx  NodePanel.css  NodePanel.tsx  Sidebar.css  Sidebar.tsx  TitleBar.css  TitleBar.tsx  Toaster.css  Toaster.tsx
src/data/: seed.ts
src/lib/: fileStore.ts  markdown.ts  nodeUtils.ts  parser.ts
src/store/: useGraph.ts
src/styles/: global.css  tokens.css
