[package]
name = "aiwellmd"
version = "0.1.0"
description = "Aiwell — AI memory knowledge graph"
authors = ["fizzexual"]
edition = "2021"

[lib]
name = "aiwellmd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
